@@ -38,8 +38,8 @@ dropSchema.MySQL=DROP SCHEMA ${schema}
 
 # Autologin, uncomment to login automatically with a user
 # Useful for testing or applications that do not need user sign in
-autologinUser=admin
-autologinPassword=admin
+#autologinUser=admin
+#autologinPassword=admin
 
 # Other options
 showApplicationName=true
